# dotfiles

./: .bash_aliases  .bashrc  .nanorc  .tmux.conf  ubuntu-post-installer.sh
.config/: mv_win_to_workspace.sh
.config/herbstluftwm/: autostart
.config/nvim/: init.lua
.config/nvim/after/plugin/: colors.lua  harpoon.lua  telescope.lua  treesitter.lua
.config/nvim/lua/: packer-plugins.lua
.config/nvim/lua/user/: packer.lua  remap.lua
.config/nvim/plugin/: packer_compiled.lua
.ssh/: SSH_and_gtihub.md  config
scripts/: install_update_neovim.sh  mv_win_to_workspace.sh  setup_skype_audio.sh  tmux-sessionizer  ubuntu-post-installer.sh  xmod  xtea.py
scripts/keyboard_via_json/: vim_move_keychron_k3_pro_iso_rgb.layout.json
scripts/xtea/: CMakeLists.txt
scripts/xtea/src/: CMakeLists.txt  XTEA.cpp  XTEA.h
scripts/xtea/unitTests/: CMakeLists.txt
scripts/xtea/unitTests/xteaEncryption/: test_XTEA.cpp
